--- a/src/modules/modal/modal-image.setup.scss
+++ b/src/modules/modal/modal-image.setup.scss
@@ -3,8 +3,6 @@
 $modal-image-dialog-width: 100% !default;
 $modal-image-dialog-height: 100% !default;
 $modal-image-dialog-position: 0 !default;
-$modal-image-dialog-gradient-color-1: rgba($color-palette-gradient-color-1, .4) !default;
-$modal-image-dialog-gradient-color-2: rgba($color-palette-gradient-color-2, .4) !default;
 
 $modal-image-content-background-color: $color-palette-white !default;
 $modal-image-content-width: 100% !default;
@@ -25,8 +23,6 @@ $modal-image-image-overlay-position: 0 !default;
 $modal-image-inner-width: 100% !default;
 $modal-image-inner-width-m: 50% !default;
 
-$modal-image-footer-position: 0 !default;
-$modal-image-footer-position-bottom: 1rem !default;
 $modal-image-footer-width: 100% !default;
 $modal-image-footer-inner-spacing-reset: 0 !default;
 
